Home modificado y varias modificaciones visuales

--- a/VLaboralWeb/App/Cursos/Partials/nuevoCurso.html
+++ b/VLaboralWeb/App/Cursos/Partials/nuevoCurso.html
@@ -4,7 +4,7 @@
             <h3 class="md-title">Nueva Curso o Certificacion</h3>
             <span flex></span>
             <md-button class="md-icon-button" ng-click="cancel()">
-                <md-icon class="fa fa-times"></md-icon>
+                <a class="fa fa-times"></a>
             </md-button>
         </div>       
     </md-toolbar>
