--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
@@ -1,5 +1,5 @@
 ﻿<nav>
-    <a>UN<span>MUNDO</span></a>
+    <a ui-sref="empresa.ofertas"><span>TOROIDE LABORAL</span></a>
     <ul>
 
         <!-- desplegable: ezequiel-->
