--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
@@ -1,5 +1,5 @@
 ﻿<nav>
-    <a>UN<span>MUNDO</span></a>
+    <a ui-sref="profesional.ofertas"><span>TOROIDE LABORAL</span></a>
     <ul>
         <li>
             <md-menu>
@@ -92,4 +92,4 @@
 </nav>
 <!--<aside ui-view="menu@"></aside>-->
 
-<div ui-view="contenido@"></div>
+<section ui-view="contenido@"></section>
