--- a/VLaboralWeb/App/Empresas/Partials/empresaPerfilPublico.html
+++ b/VLaboralWeb/App/Empresas/Partials/empresaPerfilPublico.html
@@ -1,37 +1,35 @@
-﻿<main>
-    <md-container>
-        <h1>Perfil de la Empresa</h1>
-        <md-whiteframe class="md-whiteframe-1dp wf" flex="100" layout layout-align="center center">
-            <form>
-                <md-input-container class="ic_p">
-                    <label class="lbl">Nombre</label>
-                    <input ng-model="empresa.NombreFantasia" class="inp" readonly>
-                </md-input-container>
+﻿<md-container>
+    <h1>Perfil de la Empresa</h1>
+    <md-whiteframe class="md-whiteframe-1dp wf" flex="100" layout layout-align="center center">
+        <form>
+            <md-input-container class="ic_p">
+                <label class="lbl">Nombre</label>
+                <input ng-model="empresa.NombreFantasia" class="inp" readonly>
+            </md-input-container>
 
-                <h3>Descripcion</h3><br>
-                <textarea ng-model="empresa.Descripcion" type="text-area" class="ofer_tit ofer_desc ta" rows="6" placeholder="Descripcion de la Empresa.."></textarea>
-                <br>
+            <h3>Descripcion</h3><br>
+            <textarea ng-model="empresa.Descripcion" type="text-area" class="ofer_tit ofer_desc ta" rows="6" placeholder="Descripcion de la Empresa.."></textarea>
+            <br>
 
 
-                <md-input-container class="ic_p">
-                    <label class="lbl">Direccion</label>
-                    <input ng-model="empresa.Direccion" class="inp" readonly>
-                </md-input-container>
+            <md-input-container class="ic_p">
+                <label class="lbl">Direccion</label>
+                <input ng-model="empresa.Direccion" class="inp" readonly>
+            </md-input-container>
 
-                <md-input-container class="ic_p">
-                    <label class="lbl">Telefono</label>
-                    <input ng-model="empresa.Telefono" class="inp" readonly>
-                </md-input-container>
+            <md-input-container class="ic_p">
+                <label class="lbl">Telefono</label>
+                <input ng-model="empresa.Telefono" class="inp" readonly>
+            </md-input-container>
 
-                <md-input-container class="ic_p">
-                    <label class="lbl">Sitio Web</label>
-                    <input ng-model="empresa.SitioWeb" class="inp" readonly>
-                </md-input-container>
+            <md-input-container class="ic_p">
+                <label class="lbl">Sitio Web</label>
+                <input ng-model="empresa.SitioWeb" class="inp" readonly>
+            </md-input-container>
 
-            </form>
-        </md-whiteframe>
-    </md-container>
-</main>
+        </form>
+    </md-whiteframe>
+</md-container>
 <!--#region Menu De Herramientas Flotante-->
 <!--<nav mfb-menu position="br" effect="zoomin" label="Herramientas"
      active-icon="fa fa-times" resting-icon="fa fa-plus"
