--- a/VLaboralWeb/App/Idiomas/Partials/nuevoIdiomaConocido.html
+++ b/VLaboralWeb/App/Idiomas/Partials/nuevoIdiomaConocido.html
@@ -3,8 +3,8 @@
         <div class="md-toolbar-tools">
             <h3 class="md-title">Nuevo Idioma</h3>
             <span flex></span>
-            <md-button class="md-icon-button" ng-click="cancel()">
-                <md-icon class="fa fa-times"></md-icon>
+            <md-button class="md-icon-button" ng-click="cancel()">                
+                <a class="fa fa-times"></a>
             </md-button>
         </div>     
     </md-toolbar>
@@ -32,7 +32,7 @@
 
     <md-dialog-actions>
         <md-button ng-click="saveIdiomaConocido(idiomaConocido)">
-            Agregar Experiencia
+            Agregar Idioma
         </md-button>
         <md-button ng-click="cancel()" class="md-primary">
             Cancelar
