--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaContenido.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaContenido.html
@@ -1,9 +1,6 @@
 ﻿<!--#region Contenido Empresa -->
 
-<div class="box-row">
-    <div class="box-cell">
-        <div class="box-inner padding" ui-view="contenido" id="view">
-        </div>
-    </div>
-</div>
+<!--<section ui-view="contenido" id="view">
+
+</section>-->
 <!--#endregion-->
