--- a/VLaboralWeb/App/Home/Partials/homeInfo.html
+++ b/VLaboralWeb/App/Home/Partials/homeInfo.html
@@ -1,7 +1,7 @@
 ﻿
 <section class="home">
     <header>
-        <a href="index.html">UN MUNDO</a>
+        <a href="index.html">TOROIDE LABORAL</a>
         <ul>
             <a ui-sref="registroEmpresa"><li>Registra tu empresa</li></a>
             <a ui-sref="registroProfesional"><li>¿ Eres un profesional?</li></a>
@@ -9,7 +9,7 @@
         </ul>
     </header>
     <div class="h_container">
-        <h1>NOSTROS SOMOS <span>UN MUNDO.</span></h1>
+        <h1><span style="color:#0c964d">TOROIDE</span><span style="color:#d9b121">LABORAL.</span> </h1>
     </div>
     <div class="e_content">
         <article>
@@ -43,11 +43,11 @@
 </section>
 <!-- FIN DE PANTALLA DE INICIO-->
 <!-- COMIENZO DE SECCION PARA ELEGIR TIPO DE REGISTRO (PROFESIONAL/EMPRESA)-->
-<section class="t_elegir">
+<!--<section class="t_elegir">
     <h1>LA CONEXIÓN ENTRE <span>LA EMPRESA Y EL PROFESIONAL</span></h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut ducimus esse modi accusantium reiciendis dolorem. Quae nemo suscipit neque porro ipsam laborum quas debitis facere cum maiores? Rerum, quisquam.</p>
-</section>
+    <p>Conecta con miles de Empresas y Profesionales en todas partes. Elegí el mejor. Empezá a hacer que tu proyecto sea existoso.</p>
+</section>-->
 
 <section class="elegir">
     <div class="e_prof">
@@ -64,7 +64,30 @@
 </section>
 <!-- COMIENZO DE SECCION PARA ELEGIR TIPO DE REGISTRO (PROFESIONAL/EMPRESA)-->
 <!-- COMIENZO SECCION LISTA DE OFERTAS -->
+<section class="empresas_auspicio">
+    <h1 class="enunciado">Estas empresas ya trabajan con nosotros</h1>
+    <div class="e_content" layout="row" layout-align="center center">
+        
+        <article >
+            <img src="../../../img/inti logo.png" style="margin:25px;"  />
+        </article>
 
+        <article>
+            <img src="../../../img/aseg.png" />
+        </article>
+        
+    </div>
+
+</section>
+<section>
+    <div class="footer_h">
+        <div class="contenido">
+            <p>Derechos reservados 2017 Toroide Laboral</p>
+
+        </div>
+
+    </div>
+</section>
 <!--<div class="t_list">
     <h1>Listado de ofertas disponibles</h1>
 
