Correcion en vistas de empresa

--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaContenido.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaContenido.html
@@ -1,6 +1,6 @@
 ﻿<!--#region Contenido Empresa -->
 
-<!--<section ui-view="contenido" id="view">
+<section ui-view="contenido" id="view">
 
-</section>-->
+</section>
 <!--#endregion-->
